fix(paginationBehavior): fix position property for article's button on iphone 5 device

--- a/src/modules/Article/Article.mobile.module.scss
+++ b/src/modules/Article/Article.mobile.module.scss
@@ -6,10 +6,7 @@
     margin-bottom: 48px;
     .link {
         z-index: 10;
-        position: absolute;
-        bottom: -48px;
-        left: 50%;
-        transform: translateX(-50%);
+        position: relative;
         vertical-align: middle;
         font: 700 12px/14px robotoc, Arial Narrow, sans-serif;
         text-transform: uppercase;
